Fix floating title element on mobile

--- a/src/styles/_twitter.scss
+++ b/src/styles/_twitter.scss
@@ -14,6 +14,7 @@
 
 .twitter .twitter-header .twitter-title {
   padding-bottom: 5px;
+  clear: right;
 }
 
 .twitter .twitter-header .fa-sm {
@@ -34,6 +35,7 @@
 }
 
 .twitter .profile-image {
+  clear: left;
   width: 48px;
   height: 48px;
 }
